<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:background="@color/background_color"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView android:id="@+id/faculty_reps"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faculty_reps" />


            <TextView android:id="@+id/department_reps"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department_reps" />


            <TextView android:id="@+id/sueu_governors"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sueu_governors" />

            <TextView android:id="@+id/faculty_congresses"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faculty_congresses" />

            <TextView android:id="@+id/residence_congresses"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/residence_hall_congresses" />
        </LinearLayout>

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
